--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <textarea
             readonly
             id="password"
-            placeholder="Your Secure Password"
+            placeholder="Your Secure password"
             aria-label="Generated Password"
           ></textarea>
         </div>
